# tesseract

./: .gitignore  fetch_firmware.py  get-api-key.sh
.claude/skills/ocr-textbooks/: SKILL.md  ocr-textbooks.sh
contrib/anthropic-docs-scraper/: .gitignore  README.md  pyproject.toml
contrib/anthropic-docs-scraper/src/anthropic_docs_scraper/: __init__.py  cli.py  fetch.py  parse.py  seeds.py
contrib/anthropic-docs-scraper/tests/: test_parse.py
contrib/spotify-recommender/: .env.example  .gitignore  README.md  pyproject.toml
contrib/spotify-recommender/src/spotify_recommender/: __init__.py  auth.py  cli.py  config.py  export_import.py  features.py  history.py  ingest.py  lastfm.py  mood.py  recommend.py  storage.py
contrib/spotify-recommender/tests/: test_config.py  test_export_import.py  test_pipeline.py
include/tesseract/: baseapi.h
tools/: leaked_info_checker.json  leaked_info_checker.py
