[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-docs-scraper"
version = "0.1.0"
description = "Scrape Anthropic's public API docs and emit a structured endpoint list"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
anthropic-docs-scraper = "anthropic_docs_scraper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
