[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-recommender"
version = "0.1.0"
description = "Mood-aware recommender trained on your own Spotify library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[project.scripts]
spotify-recommender = "spotify_recommender.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
